<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@id/menuHome">

    <activity
        android:id="@+id/menuProfil"
        android:name="com.example.patient.ConnexionActivity"
        android:label="@string/profil"
        tools:layout="@layout/activity_connexion" />
    <fragment
        android:id="@+id/menuConsultation"
        android:name="com.example.patient.ConsultationFragment"
        android:label="@string/consultation"
        tools:layout="@layout/fragment_consultation" />
    <!--<fragment
        android:id="@+id/menuAppointment"
        android:name="com.example.patient.RendezVousFragment"
        android:label="@string/appointment"
        tools:layout="@layout/fragment_rendez_vous" />-->
    <activity
        android:id="@+id/menuAppointment"
        android:name="com.example.patient.DateTimeActivity"
        android:label="@string/appointment"
        tools:layout="@layout/fragment_rendez_vous"
        />
    <fragment
        android:id="@+id/menuHome"
        android:name="com.example.patient.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/menuHelp"
        android:name="com.example.patient.HelpFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_help"
        />
    <fragment
        android:id="@+id/menuLocalisation"
        android:name="com.example.patient.MapsActivity"
        android:label="@string/localisation"
        tools:layout="@layout/activity_maps"
        />
</navigation>