<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/parent_layout_consultation"
        app:cardCornerRadius="10dp"
        android:layout_margin="2dp"
        android:backgroundTint="@color/colorBluePrimary"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            // Full Name Patient

            <TextView
                android:id="@+id/nomPatientCons"
                android:layout_width="245dp"
                android:layout_height="33dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:text="@string/first_name"
                android:textColor="#FFF"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/prenomPatientCons"
                android:layout_width="245dp"
                android:layout_height="36dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="38dp"
                android:text="@string/last_name"
                android:textColor="#FFF"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dateCons"
                android:layout_width="245dp"
                android:layout_height="41dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="78dp"
                android:text="@string/date"
                android:textColor="#FFF"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/diagnosticCons"
                android:layout_width="330dp"
                android:layout_height="51dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="128dp"
                android:text="@string/diagnostic"
                android:textColor="#FFF"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descriptionCons"
                android:layout_width="330dp"
                android:layout_height="81dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="190dp"
                android:text="@string/description"
                android:textColor="#FFF"
                android:textSize="16dp"
                android:textStyle="bold" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>