<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/parent_layout_rdv"
        app:cardCornerRadius="10dp"
        android:layout_margin="2dp"
        android:backgroundTint="@color/colorBluePrimary"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            // Full Name Patient

            <TextView
                android:id="@+id/nomPatientRdv"
                android:layout_width="245dp"
                android:layout_height="35dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:text="@string/first_name"
                android:textColor="#FFF"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/prenomPatientRdv"
                android:layout_width="238dp"
                android:layout_height="33dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="55dp"
                android:text="@string/last_name"
                android:textColor="#FFF"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRdvMotif"
                android:layout_width="230dp"
                android:layout_height="38dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="105dp"
                android:text="@string/motif"
                android:textColor="#FFF"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dateRdv"
                android:layout_width="223dp"
                android:layout_height="35dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="160dp"
                android:text="@string/date"
                android:textColor="#FFF"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/heureRdv"
                android:layout_width="227dp"
                android:layout_height="34dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="208dp"
                android:text="@string/time"
                android:textColor="#FFF"
                android:textSize="16dp"
                android:textStyle="bold" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>